--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "2.0.0"
 edition = "2024"
 
 [dependencies]
+serde_json = "1.0"
+rustls = { version = "0.23.29", default-features = false, features = ["std", "ring", "tls12"] }
+webpki-roots = "1.0.2"
+ring = { version = "0.17.14", features = ["std"] }
